style(pr-view): Timeline spacing and alignment fixes

--- a/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/_components/TimelineDisplay/TimelineDisplay.module.css
+++ b/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/_components/TimelineDisplay/TimelineDisplay.module.css
@@ -13,7 +13,7 @@
 
 .timelineLineBackground {
   position: absolute;
-  margin-left: 14px;
+  margin-left: var(--spacer-12);
   border-left: 1px solid var(--border-gray-secondary);
   z-index: -1;
   top: 0;
@@ -24,7 +24,7 @@
 .eventSmall {
   display: flex;
   align-items: center;
-  gap: var(--spacer-24);
+  gap: var(--spacer-8);
   color: var(--text-secondary);
 }
 
@@ -39,7 +39,7 @@
 }
 
 .timelineIcon {
-  width: 30px;
+  width: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
